# CIVITAS-RAG

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt
civitas/: __init__.py
civitas/access/contracts/: query.py
civitas/access/engines/: unified.py
civitas/access/tools/: base.py
civitas/core/config/: settings.py
civitas/core/exceptions/: knowledge_exceptions.py
civitas/core/models/: chunk.py  document.py  knowledge_space.py  metadata.py  taxonomy.py
civitas/governance/access/: rbac.py
civitas/governance/audit/: events.py  logger.py
civitas/governance/lifecycle/: manager.py  states.py
civitas/governance/quality/: checker.py
civitas/graphrag/: builder.py  extractor.py  query.py
civitas/indexing/: registry.py
civitas/indexing/indexes/: base.py  keyword.py  summary.py  vector.py
civitas/ingestion/: pipeline.py
civitas/ingestion/connectors/: base.py  filesystem.py
civitas/ingestion/parsers/: base.py  docx.py  pdf.py  text.py
civitas/ingestion/qdrant/: __init__.py  client.py  config.py  embedder.py  pipeline.py  scanner.py  tracker.py
civitas/ingestion/transformers/: chunker.py  enricher.py
civitas/knowledge/spaces/: registry.py
civitas/knowledge/taxonomy/: registry.py
civitas/retrieval/: engine.py
config/: default.yaml  qdrant_ingestion.yaml
config/environments/: development.yaml  production.yaml
config/pgadmin/: servers.json
config/postgres/: postgresql.conf
config/qdrant/: config.yaml  production.yaml
data/documents/ansible/databases/: postgres-backup.yml  postgres-install.yml
data/documents/ansible/monitoring/: prometheus-deploy.yml
data/documents/ansible/webservers/: nginx-install.yml
data/documents/cicd/docker/: Dockerfile
data/documents/cicd/github/: deploy.yml
data/documents/cicd/jenkins/: Jenkinsfile
data/documents/iam/aws/: s3-policy.json
data/documents/ssh/prod/: ssh-config-prod.conf
data/documents/terraform/aws/prod/: main.tf
data/documents/terraform/modules/vpc/: main.tf
database/migrations/: 001_core_schema.sql  001_init.sql  002_vector_extensions.sql  003_graph_schema.sql  004_governance_schema.sql
docs/: GUIDE_UTILISATEUR.md
docs/architecture/: ADR-001-monorepo.md  ADR-002-knowledge-layers.md  ADR-003-multi-index.md
docs/vision/: platform-vision.md
scripts/: ingest.py  qdrant_ingest.py  setup_database.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_models.py  test_qdrant_ingestion.py  test_taxonomy.py
