[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "civitas-rag"
version = "0.1.0"
description = "CIVITAS — Enterprise Knowledge Platform built on LlamaIndex + PostgreSQL + pgvector + GraphRAG"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{ name = "CIVITAS Platform Team" }]
keywords = ["rag", "knowledge", "llm", "llamaindex", "graphrag", "pgvector", "enterprise"]

[project.urls]
Repository = "https://github.com/amourgit/CIVITAS-RAG"
Documentation = "https://github.com/amourgit/CIVITAS-RAG/tree/main/docs"

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "ipython>=8.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["civitas"]

# ─────────────────────────────────────────────
#  DEPENDENCIES
# ─────────────────────────────────────────────
[project.dependencies]

# LlamaIndex core + integrations
"llama-index>=0.10.52" = []
"llama-index-vector-stores-postgres>=0.1.14" = []
"llama-index-embeddings-openai>=0.1.11" = []
"llama-index-embeddings-huggingface>=0.2.0" = []
"llama-index-llms-openai>=0.1.25" = []
"llama-index-graph-stores-neo4j>=0.1.4" = []
"llama-index-postprocessor-colbert-rerank>=0.1.3" = []
"llama-index-retrievers-bm25>=0.2.1" = []

# Database
"psycopg2-binary>=2.9.9" = []
"pgvector>=0.2.5" = []
"sqlalchemy>=2.0.30" = []
"alembic>=1.13.1" = []

# Document parsing
"pypdf>=4.2.0" = []
"python-docx>=1.1.0" = []
"openpyxl>=3.1.2" = []
"beautifulsoup4>=4.12.3" = []
"lxml>=5.2.0" = []
"markdownify>=0.12.1" = []
"chardet>=5.2.0" = []

# NLP / ML
"sentence-transformers>=3.0.0" = []
"spacy>=3.7.4" = []
"networkx>=3.3" = []
"graspologic>=3.3.0" = []

# Configuration & utilities
"pydantic>=2.7.0" = []
"pydantic-settings>=2.2.1" = []
"python-dotenv>=1.0.1" = []
"pyyaml>=6.0.1" = []
"rich>=13.7.1" = []
"loguru>=0.7.2" = []
"tenacity>=8.3.0" = []
"httpx>=0.27.0" = []
"numpy>=1.26.0" = []

# ─────────────────────────────────────────────
#  TOOLING
# ─────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=civitas --cov-report=term-missing -v"

[tool.coverage.run]
source = ["civitas"]
omit = ["tests/*", "scripts/*"]
